# PythonFaceTracker

./: .gitignore  CHANGELOG.md  README.es.md  README.md  facetrail.bat  facetrail.ps1  facetrail.sh  pyproject.toml
scripts/: build_release.py  demo_terminal.ps1  demo_terminal.sh
src/facetrail/: __init__.py  cli.py  core.py  gui.py
