[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facetrail"
version = "1.1.0"
description = "FaceTrail is a cross-platform CLI for face extraction, clustering, visual reports, and privacy-safe media exports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "sularhen" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.9",
  "platformdirs>=4.0"
]
keywords = ["opencv", "face-detection", "video", "privacy", "cli"]

[project.scripts]
facetrail = "facetrail.cli:main"
facetrail-gui = "facetrail.gui:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
